# spatialite-simple

./: .gitignore  LICENSE  Main.hs  README.md  spatialite-simple.cabal  spatialite.cabal  stack.yaml
src/Database/GIS/: Schema.hs  SpatiaLite.hs
src/Database/GIS/SpatiaLite/: Internal.hs
tst/: Main.hs
