name:                spatialite-simple
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:         LICENSE
author:              Simon Beaumont
maintainer:          datalligator@icloud.com
-- copyright:           
build-type:          Simple

cabal-version:       >=1.10

--
-- spatialite-simple library
--
        
library
  build-depends:       base
                     , text
                     , direct-sqlite
                     , sqlite-simple
                     , mtl
                     --, bytestring

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O3 -Wall
  exposed-modules:     Database.GIS.SpatiaLite
                       Database.GIS.Schema
  other-modules:       Database.GIS.SpatiaLite.Internal
  extra-libraries:     sqlite3
  -- this is mac os aka darwin specific
  extra-lib-dirs:      /usr/local/opt/sqlite3/lib /usr/local/lib
        
                     
executable check
  main-is:             Main.hs
  -- other-modules:    
  -- other-extensions:    
  build-depends:       base
                     , spatialite-simple
                     , text
                     --, direct-sqlite
                     , sqlite-simple
                     --, mtl
                     --, bytestring

  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -O3 -Wall -threaded
  extra-libraries:     sqlite3
  extra-lib-dirs:      /usr/local/opt/sqlite3/lib /usr/local/lib
